--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "node_modules/bootstrap/dist/css/bootstrap.min.css",
             "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
           ],
-          "scripts": []
+          "scripts": [],
+          "baseHref": "/helena-lynd.github.io/"
         },
         "configurations": {
           "production": {
