--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
           ],
           "scripts": [],
-          "baseHref": "/helena-lynd.github.io/"
+          "baseHref": "/"
         },
         "configurations": {
           "production": {
